--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"passport": "^0.4.1",
 		"passport-google-oauth20": "^2.0.0",
 		"passport-local": "^1.0.0",
+		"peer": "^0.5.3",
 		"socket.io": "^2.3.0",
 		"uuid": "^8.3.1"
 	}
