--- a/Config/config.env
+++ b/Config/config.env
@@ -2,3 +2,5 @@ PORT = 5000
 MONGO_URI='mongodb+srv://jpmmatias:jpmmatiassenha@cluster0.f4mwc.mongodb.net/AllyDev?retryWrites=true&w=majority'
 GOOGLE_CLIENT_ID=" 936360549674-on6jsc0oso7ligeapj9166orh1krq4q4.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET=EmIueDLoIMlogUrhjbQ2EvZu
+GOOGLE_EMAIL=allyticc@gmail.com
+GOOGLE_EMAIL_SENHA=P6Cn58LLvEKo
