--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"express-session": "^1.17.1",
 		"method-override": "^3.0.0",
 		"moment": "^2.29.1",
+		"mongodb": "^3.6.2",
 		"mongoose": "^5.10.5",
 		"morgan": "^1.10.0",
 		"passport": "^0.4.1",
