--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"mongodb": "^3.6.2",
 		"mongoose": "^5.10.5",
 		"morgan": "^1.10.0",
+		"multer": "^1.4.2",
 		"passport": "^0.4.1",
 		"passport-google-oauth20": "^2.0.0",
 		"passport-local": "^1.0.0",
