--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"nodemon": "^2.0.4"
 	},
 	"dependencies": {
+		"aws-sdk": "^2.779.0",
 		"bcryptjs": "^2.4.3",
 		"colors": "^1.4.0",
 		"connect-flash": "^0.1.1",
@@ -27,6 +28,7 @@
 		"mongoose": "^5.10.5",
 		"morgan": "^1.10.0",
 		"multer": "^1.4.2",
+		"multer-s3": "^2.9.0",
 		"passport": "^0.4.1",
 		"passport-google-oauth20": "^2.0.0",
 		"passport-local": "^1.0.0",
