--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
 		"morgan": "^1.10.0",
 		"multer": "^1.4.2",
 		"multer-s3": "^2.9.0",
+		"nodemailer": "^6.4.14",
 		"passport": "^0.4.1",
 		"passport-google-oauth20": "^2.0.0",
 		"passport-local": "^1.0.0",
 		"socket.io": "^2.3.0",
-		"uuid": "^8.3.1"
+		"uuid": "^8.3.1",
+		"xoauth2": "^1.2.0"
 	}
 }
