--- a/package.json
+++ b/package.json
@@ -33,8 +33,6 @@
 		"passport": "^0.4.1",
 		"passport-google-oauth20": "^2.0.0",
 		"passport-local": "^1.0.0",
-		"socket.io": "^2.3.0",
-		"uuid": "^8.3.1",
-		"xoauth2": "^1.2.0"
+		"socket.io": "^2.3.0"
 	}
 }
