--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
 		"nodemon": "^2.0.4"
 	},
 	"dependencies": {
-		"aws-sdk": "^2.779.0",
 		"bcryptjs": "^2.4.3",
 		"colors": "^1.4.0",
 		"connect-flash": "^0.1.1",
@@ -22,13 +21,13 @@
 		"express": "^4.17.1",
 		"express-handlebars": "^5.1.0",
 		"express-session": "^1.17.1",
+		"helmet": "^4.2.0",
 		"method-override": "^3.0.0",
 		"moment": "^2.29.1",
 		"mongodb": "^3.6.2",
 		"mongoose": "^5.10.5",
 		"morgan": "^1.10.0",
 		"multer": "^1.4.2",
-		"multer-s3": "^2.9.0",
 		"nodemailer": "^6.4.14",
 		"passport": "^0.4.1",
 		"passport-google-oauth20": "^2.0.0",
