--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 	"engines": {
 		"node": "14.15.0",
 		"yarn": "1.21.1"
-	  },
+	},
 	"devDependencies": {
 		"nodemon": "^2.0.4"
 	},
@@ -36,6 +36,7 @@
 		"passport": "^0.4.1",
 		"passport-google-oauth20": "^2.0.0",
 		"passport-local": "^1.0.0",
-		"socket.io": "^2.3.0"
+		"socket.io": "^2.3.0",
+		"twilio": "^3.51.0"
 	}
 }
