--- a/Config/config.env
+++ b/Config/config.env
@@ -4,9 +4,7 @@ GOOGLE_CLIENT_ID=" 936360549674-on6jsc0oso7ligeapj9166orh1krq4q4.apps.googleuser
 GOOGLE_CLIENT_SECRET=EmIueDLoIMlogUrhjbQ2EvZu
 GOOGLE_EMAIL=allyticc@gmail.com
 GOOGLE_EMAIL_SENHA=P6Cn58LLvEKo
-TWILIO_ACCOUNT_SID = AC46d231dbc3a76cd95f7fcfd324a3da62
-TWILIO_AUTH_TOKEN = 304873207f7bcfafc115a62e8fd90a7b
-
-
+LOCAL_AUTH_TOKEN=cb78caca184da963f477d876275269a6
+LOCAL_TWILLIO_SID=AC46d231dbc3a76cd95f7fcfd324a3da62
 
 
